[gd_scene load_steps=5 format=3 uid="uid://brhy8j4x5lpdk"]

[ext_resource type="Script" path="res://scripts/ui/InventoryUI.gd" id="1_inventory"]
[ext_resource type="Texture2D" path="res://assets/ui/wireframe/shadedLight03.png" id="2_inv_bg"]
[ext_resource type="Texture2D" path="res://assets/ui/wireframe/shadedLight04.png" id="3_inv_panel"]
[ext_resource type="Texture2D" path="res://assets/ui/wireframe/shadedLight05.png" id="4_inv_slot"]

[node name="InventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
visible = false
mouse_filter = 2
script = ExtResource("1_inventory")

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2_inv_bg")
mouse_filter = 2
modulate = Color(1, 1, 1, 0.8)

[node name="InventoryPanel" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -350.0
offset_right = 500.0
offset_bottom = 350.0
texture = ExtResource("3_inv_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="Header" type="HBoxContainer" parent="InventoryPanel/VBoxContainer"]
layout_mode = 2

[node name="HeaderBG" type="NinePatchRect" parent="InventoryPanel/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("4_inv_slot")

[node name="Title" type="Label" parent="InventoryPanel/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "üéí Inventory & Equipment"
theme_type_variation = &"HeaderLarge"

[node name="CloseButton" type="Button" parent="InventoryPanel/VBoxContainer/Header"]
layout_mode = 2
text = "‚ùå"

[node name="HSeparator" type="HSeparator" parent="InventoryPanel/VBoxContainer"]
layout_mode = 2

[node name="MainContent" type="HBoxContainer" parent="InventoryPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftPanel" type="VBoxContainer" parent="InventoryPanel/VBoxContainer/MainContent"]
layout_mode = 2
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="LeftPanelBG" type="NinePatchRect" parent="InventoryPanel/VBoxContainer/MainContent/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_inv_panel")

[node name="PlayerStats" type="VBoxContainer" parent="InventoryPanel/VBoxContainer/MainContent/LeftPanel"]
layout_mode = 2

[node name="StatsBG" type="NinePatchRect" parent="InventoryPanel/VBoxContainer/MainContent/LeftPanel/PlayerStats"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("4_inv_slot")

[node name="StatsTitle" type="Label" parent="InventoryPanel/VBoxContainer/MainContent/LeftPanel/PlayerStats"]
layout_mode = 2
text = "‚ö° Character Stats"
theme_type_variation = &"HeaderMedium"

[node name="StatsContainer" type="VBoxContainer" parent="InventoryPanel/VBoxContainer/MainContent/LeftPanel/PlayerStats"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="InventoryPanel/VBoxContainer/MainContent/LeftPanel/PlayerStats/StatsContainer"]
layout_mode = 2
text = "Level: 1"

[node name="HealthLabel" type="Label" parent="InventoryPanel/VBoxContainer/MainContent/LeftPanel/PlayerStats/StatsContainer"]
layout_mode = 2
text = "‚ù§Ô∏è Health: 100/100"

[node name="FaithLabel" type="Label" parent="InventoryPanel/VBoxContainer/MainContent/LeftPanel/PlayerStats/StatsContainer"]
layout_mode = 2
text = "‚ú® Faith: 50"

[node name="WisdomLabel" type="Label" parent="InventoryPanel/VBoxContainer/MainContent/LeftPanel/PlayerStats/StatsContainer"]
layout_mode = 2
text = "üß† Wisdom: 50"

[node name="SocialLabel" type="Label" parent="InventoryPanel/VBoxContainer/MainContent/LeftPanel/PlayerStats/StatsContainer"]
layout_mode = 2
text = "üó£Ô∏è Social: 50"

[node name="GoldLabel" type="Label" parent="InventoryPanel/VBoxContainer/MainContent/LeftPanel/PlayerStats/StatsContainer"]
layout_mode = 2
text = "üí∞ Gold: 100"

[node name="Equipment" type="VBoxContainer" parent="InventoryPanel/VBoxContainer/MainContent/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="EquipmentBG" type="NinePatchRect" parent="InventoryPanel/VBoxContainer/MainContent/LeftPanel/Equipment"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("4_inv_slot")

[node name="EquipmentTitle" type="Label" parent="InventoryPanel/VBoxContainer/MainContent/LeftPanel/Equipment"]
layout_mode = 2
text = "‚öîÔ∏è Equipment"
theme_type_variation = &"HeaderMedium"

[node name="EquipmentGrid" type="GridContainer" parent="InventoryPanel/VBoxContainer/MainContent/LeftPanel/Equipment"]
layout_mode = 2
columns = 3

[node name="HeadSlot" type="Button" parent="InventoryPanel/VBoxContainer/MainContent/LeftPanel/Equipment/EquipmentGrid"]
layout_mode = 2
custom_minimum_size = Vector2(64, 64)
text = "Head"

[node name="ChestSlot" type="Button" parent="InventoryPanel/VBoxContainer/MainContent/LeftPanel/Equipment/EquipmentGrid"]
layout_mode = 2
custom_minimum_size = Vector2(64, 64)
text = "Chest"

[node name="LegsSlot" type="Button" parent="InventoryPanel/VBoxContainer/MainContent/LeftPanel/Equipment/EquipmentGrid"]
layout_mode = 2
custom_minimum_size = Vector2(64, 64)
text = "Legs"

[node name="WeaponSlot" type="Button" parent="InventoryPanel/VBoxContainer/MainContent/LeftPanel/Equipment/EquipmentGrid"]
layout_mode = 2
custom_minimum_size = Vector2(64, 64)
text = "Weapon"

[node name="ShieldSlot" type="Button" parent="InventoryPanel/VBoxContainer/MainContent/LeftPanel/Equipment/EquipmentGrid"]
layout_mode = 2
custom_minimum_size = Vector2(64, 64)
text = "Shield"

[node name="AccessorySlot" type="Button" parent="InventoryPanel/VBoxContainer/MainContent/LeftPanel/Equipment/EquipmentGrid"]
layout_mode = 2
custom_minimum_size = Vector2(64, 64)
text = "Accessory"

[node name="RightPanel" type="VBoxContainer" parent="InventoryPanel/VBoxContainer/MainContent"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RightPanelBG" type="NinePatchRect" parent="InventoryPanel/VBoxContainer/MainContent/RightPanel"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_inv_panel")

[node name="InventoryTitle" type="Label" parent="InventoryPanel/VBoxContainer/MainContent/RightPanel"]
layout_mode = 2
text = "üì¶ Items"
theme_type_variation = &"HeaderMedium"

[node name="InventoryTabs" type="TabContainer" parent="InventoryPanel/VBoxContainer/MainContent/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="All Items" type="ScrollContainer" parent="InventoryPanel/VBoxContainer/MainContent/RightPanel/InventoryTabs"]
layout_mode = 2

[node name="ItemGrid" type="GridContainer" parent="InventoryPanel/VBoxContainer/MainContent/RightPanel/InventoryTabs/All Items"]
layout_mode = 2
size_flags_horizontal = 3
columns = 6

[node name="Consumables" type="ScrollContainer" parent="InventoryPanel/VBoxContainer/MainContent/RightPanel/InventoryTabs"]
visible = false
mouse_filter = 2
layout_mode = 2

[node name="ConsumableGrid" type="GridContainer" parent="InventoryPanel/VBoxContainer/MainContent/RightPanel/InventoryTabs/Consumables"]
layout_mode = 2
size_flags_horizontal = 3
columns = 6

[node name="Equipment" type="ScrollContainer" parent="InventoryPanel/VBoxContainer/MainContent/RightPanel/InventoryTabs"]
visible = false
mouse_filter = 2
layout_mode = 2

[node name="EquipGrid" type="GridContainer" parent="InventoryPanel/VBoxContainer/MainContent/RightPanel/InventoryTabs/Equipment"]
layout_mode = 2
size_flags_horizontal = 3
columns = 6

[node name="Materials" type="ScrollContainer" parent="InventoryPanel/VBoxContainer/MainContent/RightPanel/InventoryTabs"]
visible = false
mouse_filter = 2
layout_mode = 2

[node name="MaterialGrid" type="GridContainer" parent="InventoryPanel/VBoxContainer/MainContent/RightPanel/InventoryTabs/Materials"]
layout_mode = 2
size_flags_horizontal = 3
columns = 6

[node name="ItemDetails" type="VBoxContainer" parent="InventoryPanel/VBoxContainer"]
layout_mode = 2

[node name="DetailsBG" type="NinePatchRect" parent="InventoryPanel/VBoxContainer/ItemDetails"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("4_inv_slot")

[node name="DetailTitle" type="Label" parent="InventoryPanel/VBoxContainer/ItemDetails"]
layout_mode = 2
text = "Select an item to see details"
theme_type_variation = &"HeaderMedium"

[node name="DetailText" type="RichTextLabel" parent="InventoryPanel/VBoxContainer/ItemDetails"]
layout_mode = 2
custom_minimum_size = Vector2(0, 80)
bbcode_enabled = true
text = "Item description will appear here."

[node name="ActionButtons" type="HBoxContainer" parent="InventoryPanel/VBoxContainer/ItemDetails"]
layout_mode = 2

[node name="ActionBG" type="NinePatchRect" parent="InventoryPanel/VBoxContainer/ItemDetails/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("4_inv_slot")

[node name="UseButton" type="Button" parent="InventoryPanel/VBoxContainer/ItemDetails/ActionButtons"]
layout_mode = 2
text = "Use"
disabled = true

[node name="EquipButton" type="Button" parent="InventoryPanel/VBoxContainer/ItemDetails/ActionButtons"]
layout_mode = 2
text = "Equip"
disabled = true

[node name="DropButton" type="Button" parent="InventoryPanel/VBoxContainer/ItemDetails/ActionButtons"]
layout_mode = 2
text = "Drop"
disabled = true

[connection signal="pressed" from="InventoryPanel/VBoxContainer/Header/CloseButton" to="." method="_on_close_button_pressed"]